installr 0.13.6 (2014-03-12)
---------------------------

UPDATED FUNCTIONS:
   * install.URL - new parameters added:
         * massage (TRUE) parameter. The function now prints (cat) if the file was downloaded succesfully or not, combined with the location of the file. It also informs the user if the file is later removed or not.
         * download_dir (tempdir) character. Allowing the user to choose into which directory the file should be downloaded.
   * updateR, install.R - added the keep_install_file parameter (default is FALSE). Based on the request by Boral here: http://www.r-statistics.com/2014/03/r-3-0-3-is-released/

installr 0.13.5 (2014-03-01)
---------------------------

UPDATED FUNCTIONS:
   * os.manage - shouldn't ask for minutes if no appropriate option was selected. Don't ask for minutes if 'Cancel' is selected or window was closed without selecting any option. Props to Kornelius Rohmeyer for the commit (rohmeyer@small-projects.de).


installr 0.13.4 (2014-02-06)
---------------------------

UPDATED FUNCTIONS:
   * install.pandoc - 
      * if the installation failed, no need to ask about restarting the computer!
      * retiring "use_regex" from service. (props to Scott Milligan for the bug report.)


installr 0.13.3 (2014-02-01)
---------------------------

OTHER NOTES:
   * DESCRIPTION:
      * Fixed the usage of person()
      * minor tweaks to Title and Description
   * installr 0.13.3 is to be shipped to CRAN (thanks to the patient guidance of Uwe Ligges!)

installr 0.13.2 (2014-01-31)
---------------------------

OTHER NOTES:
   * moved tools from imports to suggest in order to avoid "call not declared from" error.
   * Added "RdTags" as an internal function, since using tools:::RdTags caused too many problems.
   * Fixed a single "@" in a roxygen2 doc (which caused erros)
   * Changed main e-mail to be @gmail instead of @math.tau.ac.il.
   * installr 0.13.2 is to be shipped to CRAN.



installr 0.13.1 (2014-01-31)