@@ -5,7 +5,7 @@
 
   install.R(page_with_download_url = "http://cran.rstudio.com/bin/windows/base/",
   pat = "R-[0-9.]+-win.exe", to_checkMD5sums = TRUE,
-  keep_install_file = FALSE, ...)
+  keep_install_file = FALSE, download_dir = tempdir(), ...)
 }
 \arguments{
   \item{page_with_download_url}{URL from which the latest
@@ -20,6 +20,10 @@
 
   \item{keep_install_file}{If TRUE - the installer file
   will not be erased after it is downloaded and run.}
+
+  \item{download_dir}{A character of the directory into
+  which to download the file. (default is
+  \link{tempdir}())}
 
   \item{...}{extra parameters to pass to
   \link{install.URL}}
